--- a/web/code.html
+++ b/web/code.html
@@ -6,7 +6,7 @@
     <title>COLORS</title>
   </head>
   <body>
-    <p
+    <div
       style="
         display: flex;
         margin: 0;
@@ -16,7 +16,33 @@
         font-size: 50px;
       "
     >
-      Coming Soon
-    </p>
+      <p>Coming Soon</p>
+      <p id="xmas"></p>
+    </div>
+
+    <script>
+      var countDownDate = new Date("Dec 25, 2024 00:00:00").getTime();
+
+      var x = setInterval(function () {
+        var now = new Date().getTime();
+
+        var distance = countDownDate - now;
+
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor(
+          (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        document.getElementById("xmas").innerHTML =
+          days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+
+        if (distance < 0) {
+          clearInterval(x);
+          document.getElementById("xmas").innerHTML = "EXPIRED";
+        }
+      }, 1000);
+    </script>
   </body>
 </html>
