--- a/web/index.html
+++ b/web/index.html
@@ -97,18 +97,12 @@
         justify-content: center;
       }
 
-      canvas {
-        margin-bottom: 10px;
-        padding: 0;
-      }
-
       .instrument-wrapper {
         width: 100%;
         display: flex;
         justify-content: center;
         bottom: 0;
         padding: 10px;
-        width: 100%;
       }
 
       @media (max-width: 768px) {
@@ -179,14 +173,10 @@
     <div class="game-container">
       <h1>THE Easiest Game</h1>
       <div id="status"></div>
-      <div style="display: flex; align-items: flex-start; margin-top: 0;">
+      <div style="display: flex;">
         <div
-          style="
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 0;
-          "
+          
+
         >
           <ul
             style="
