--- a/web/index.html
+++ b/web/index.html
@@ -173,15 +173,16 @@
     <div class="game-container">
       <h1>THE Easiest Game</h1>
       <div id="status"></div>
-      <div style="display: flex;">
-        <div
-          
-
-        >
+      <div style="display: flex; justify-content: center;">
+        <div style="            
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: 62px;
+          ">
           <ul
             style="
-              margin: 0;
-              padding-top: 62px;
+            margin: 0;
+            padding: 0;
               list-style-type: none;
               font-weight: bold;
             "
