--- a/web/code.html
+++ b/web/code.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COLORS</title>
+    <style>
+      nav ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        flex-wrap: wrap;
+      }
+
+      nav ul li {
+        padding: 15px;
+        margin: 5px;
+      }
+
+      nav ul li a {
+        text-decoration: none;
+        color: #000;
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">Color Festival Game</a></li>
+          <li><a href="code">Color Code Game</a></li>
+          <li><a href="multiplayer">Multiplayer</a></li>
+        </ul>
+      </nav>
+    </header>
     <div
       style="
         display: flex;
+        flex-direction: column;
         margin: 0;
         height: 50vh;
         justify-content: center;
