--- a/web/index.html
+++ b/web/index.html
@@ -208,7 +208,8 @@
       <div id="instrument-wrapper" class="instrument-wrapper"></div>
       
 
-    <script src="js/graphics.js"></script>
+    <script src="js/staffGraphics.js"></script>
     <script src="js/player.js"></script>
+    <script src="js/festival.js"></script>
   </body>
 </html>
